--- a/templates/home.html
+++ b/templates/home.html
@@ -127,26 +127,44 @@
     </div>
 
 
+    
+
+      <div class="row mb-3 d-flex justify-content-center" >
+        <div class="col-sm-3 d-flex justify-content-center">
+        <button type="button" class="btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">1</button>
+        </div>
+        <div class="col-sm-3 d-flex justify-content-center">
+        <button type="button" class="col-sm-3  btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">2</button>
+        </div>
+        <div class="col-sm-3 d-flex justify-content-center">
+        <button type="button" class="col-sm-3  btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">3</button>
+        </div>
+        <div class="col-sm-3 d-flex justify-content-center">
+        <button type="button" class="col-sm-3  btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">4</button>
+        </div>
+    
+      </div>
+
     <div class="row d-flex justify-content-center" >
         
-        <div class="col-sm-2">
-            <h3 class="">You search</h3>
+        <div class="col-sm-3 ">
+            <h3 class=" d-flex justify-content-center">You search</h3>
             <p class="">Search over <strong>~100 tyres</strong> to find the right tyre for your car</p>
         </div>
         
-        <div class="col-sm-2">              
-            <h3 class="">You buy</h3>
+        <div class="col-sm-3">              
+            <h3 class=" d-flex justify-content-center">You buy</h3>
             <p class="">Purchase &amp; save up to <strong>45% off</strong> MRP</p>
         </div>
         
-        <div class="col-sm-2">              
-            <h3 class="">We deliver</h3>
+        <div class="col-sm-3">              
+            <h3 class=" d-flex justify-content-center">We deliver</h3>
             <p class="">We’ll deliver your tyres to one of our fitment locations or your preferred address <strong>FAST &amp; FREE<sup>+</sup></strong> (exclusions apply see <a class="sc-dzVpKk bBBwQO" href="/learn-more/purchasing-tyres/delivery-information">Delivery Information</a>. for further details)</p>
         </div>
         
 
-        <div class="col-sm-2">              
-            <h3 class="">We install</h3>
+        <div class="col-sm-3">              
+            <h3 class=" d-flex justify-content-center">We install</h3>
             <p class="">Our <strong>Mobile Fitting Vans</strong> can come to you, or select one of our <strong>preferred Fitment Centre's</strong> to install your tyres and they'll do the rest^</p>
         </div>
         
