--- a/templates/store/store_search_view.html
+++ b/templates/store/store_search_view.html
@@ -10,7 +10,7 @@
 	{% if 'search' in request.path %}
 	<h4 class="title-page">Search Results</h4>
 	{% else %}
-	<h2 class="title-page">Our Store</h2>
+	<h4 class="title-page">Our Store</h4>
 	{% endif %}
 </div> <!-- container //  -->
 </section>
@@ -26,6 +26,8 @@
 		
 <div class="card">
 	<div class="card-body">
+
+		{% if 'width' in request.GET %}
 		<form action="{% url 'search_size' %}" method="GET" class="search">
 			
 			<div class="row mb-3">
@@ -87,7 +89,66 @@
 			</button>
 			
 		</form> 
-		
+		{% else %}
+		<form action="{% url 'search_size' %}" method="GET" class="search">
+							
+			<div class="row mb-3">
+				
+				<label class="col col-sm-4 col-form-label " for="width">AH</label>
+				<div class="col-sm-6"> 
+					<select class="form-select" onclick="getsizes('AH');" id="ah"name="ah">
+						
+						<option>Any</option>
+						{% for ah in ah %}
+						{% if ah.ah == sah %}
+						<option selected>{{ ah.ah }}</option>
+						{% else %}
+						<option>{{ ah.ah }}</option>
+						{% endif %}
+						{% endfor %}
+					</select>
+				</div>
+			</div>
+			
+			 
+			
+			
+			<div class="row mb-3">
+				<label class="col-sm-4 col-form-label" for="terrain">Left / Right</label>
+				<div class="col-sm-6"> 
+					<select class="form-select" id="lr"name="lr">
+						 
+						{% if slr != None and  slr != "Any" %}
+						{% if slr == "L" %}
+						<option>Any</option>
+						<option value="L" selected>Left</option>
+						<option value="R">Right</option>
+						{% else %}
+						<option>Any</option>
+						<option value="R" selected>Right</option>
+						<option value="L">Left</option>
+						{% endif %}
+						{% else %}
+
+						<option>Any</option>
+						<option value="L">Left</option>
+						<option value="R">Right</option>
+						{% endif %}
+					</select>
+				</div>
+			</div>
+			
+			<input type="hidden" id="view1"  name="view1" value="view2">
+			
+			<button class="btn btn-primary" type="submit">
+				Filter
+				<i class="fa fa-search"></i>
+			</button>
+			
+		</form> 
+
+
+		{% endif %}
 	</div>
 	
 </div> <!-- card.// -->
