--- a/static/css/ui.css
+++ b/static/css/ui.css
@@ -423,13 +423,13 @@ p:last-child {
 
 .header-main {
   position: relative;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .brand-wrap .logo, .navbar-brand .logo {
   margin-right: 7px;
-  max-height: 65px;
+  max-height: 39px;
   display: inline-block;
 }
 
@@ -1463,7 +1463,7 @@ a[class*=card]:hover .title {
 
 .topbar {
   background-color: #1346af;
-  padding: 4px 0;
+
 }
 
 .topbar .woostify-container {
@@ -1576,4 +1576,11 @@ a[class*=card]:hover .title {
 
 .accordion-button {
   background-color: white !important;;
+}
+
+.seimg {
+  color: white;
+  height: 400px;
+  background-size: cover !important;
+  position: relative;
 }
