--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <!-- ========================= SECTION MAIN ========================= -->
-<section class="section-intro padding-y-sm">
+<section class="section-intro">
     <div class="container">
         <div  style="align: center;" class="intro-banner-wrap">
             {% include "includes/alerts.html" %}
@@ -11,168 +11,108 @@
         </div>
     </div> <!-- container //  -->
     
-    <div class='col-lg-12'>
+    <div class='col-lg-12 seimg' style="background: url('{{ STATIC_URL }}static/images/banners/Safety.png') no-repeat;">
         
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="rounded mx-auto d-block img-fluid " style="height:400px;" src="{% static 'images/banners/nankang_head.jpg' %}" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/INSTA3.png' %}" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/nkban1.jpg' %}" alt="Third slide">
-                </div>
-            </div>
-        </div>
+        
+
+         
+        <section class="section-name ">
+            <div class="container">
+                <header class="section-heading">
+                    <h3 class="section-title">Are you looking to buy a Tyre?</h3>
+                </header><!-- sect-heading -->
+                 
+                <hr>
+                <div class="row searchseation">
+                    
+                    <div class="col-sm-4">
+                        <p>How to find car tyre size? <br>
+                            215 is the section width of a tyre, 60 is Aspect Ratio of tyre, 16 is Diameter of the wheel rim</p>
+                            
+                            <img class="img-fluid" src="{% static 'images/banners/tyresize.jpeg' %}">
+                        </div>
+                        
+                        <div class="col-sm-5">
+                            <form action="{% url 'search_size' %}" method="GET" class="search">
+                                
+
+
+                                <div class="row mb-3">
+                                    
+                                     
+                                    <label class="col col-sm-3 col-form-label " for="width">Width</label>
+        
+                                    <label class="col-sm-3 col-form-label" for="profile">Profile</label>
+
+                                    <label class="col-sm-3 col-form-label" for="diameter">Rim Size</label>
+                                     <label class="col-sm-3 col-form-label" for="terrain">Terrain</label>
+                                     
+
+                                </div>
+
+                                <div class="row mb-3">
+                                    
+                                     
+                                    <div class="col col-sm-3"> 
+                                        <select class="form-select"  required onclick="getsizes('width');" id="width"name="width">
+                                            <option>Width</option>
+                                            {% for width in width %}
+                                            <option>{{ width.width }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+        
+                                    <div class="col col-sm-3"> 
+                                        <select class="form-select" required onclick="getsizes('profile');" id="profile"name="profile">
+                                            
+                                            <option>Profile</option>
+                                            
+                                        </select>
+                                    </div>
+
+                                    <div class="col col-sm-3"> 
+                                        <select class="form-select"  required onclick="getsizes('rim');"   id="diameter"name="diameter">
+                                            
+                                            <option>Rim Size</option>
+                                            
+                                        </select>
+                                    </div>
+                                    
+                                    <div class="col col-sm-2"> 
+                                        <select class="form-select" id="terrain"name="terrain">
+                                            <option value="Any">Any</option>
+                                        </select>
+                                    </div>
+
+                                </div>
+                                
+                                
+                                
+                                 
+                                
+                                <button class="btn btn-primary" type="submit">
+                                    Search
+                                    <i class="fa fa-search"></i>
+                                </button>
+                                
+                            </form> 
+                        </div>
+                        
+                    </div> <!-- row.// -->
+                </div><!-- container // -->
+            </section>
+
+
+
+
     </div>
     
 </section>
 <!-- ========================= SECTION MAIN END// ========================= -->
 
-<section class="section-name padding-y-sm">
-    <div class="container">
-        <header class="section-heading">
-            <h3 class="section-title">Are you looking to buy a Tyre?</h3>
-        </header><!-- sect-heading -->
-        <div class="row">
-            Tyres are the essential point of contact between your vehicle and the road. We provides a range of tyres which provide good grip, superior control and excellent driving experience. You can buy brand new tyres online in just few steps.
-        </div>
-        <hr>
-        <div class="row">
-            
-            <div class="col-sm-4">
-                <p>How to find car tyre size? <br>
-                    215 is the section width of a tyre, 60 is Aspect Ratio of tyre, 16 is Diameter of the wheel rim</p>
-                    
-                    <img class="img-fluid" src="{% static 'images/banners/tyresize.jpeg' %}">
-                </div>
-                
-                <div class="col-sm-5">
-                    <form action="{% url 'search_size' %}" method="GET" class="search">
-                        
-                        <div class="row mb-3">
-                            
-                            <label class="col col-sm-3 col-form-label " for="width">Width</label>
-                            <div class="col col-sm-5"> 
-                                <select class="form-select"  required onclick="getsizes('width');" id="width"name="width">
-                                    <option>Width</option>
-                                    {% for width in width %}
-                                    <option>{{ width.width }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-
-                        </div>
-                        
-                        <div class="row mb-3">
-                            <label class="col-sm-3 col-form-label" for="profile">Profile</label>
-                            <div class="col-sm-5"> 
-                                <select class="form-select" required onclick="getsizes('profile');" id="profile"name="profile">
-                                    
-                                    <option>Profile</option>
-                                    
-                                </select>
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <label class="col-sm-3 col-form-label" for="diameter">Rim Size</label>
-                            <div class="col-sm-5"> 
-                                <select class="form-select"  required onclick="getsizes('rim');"   id="diameter"name="diameter">
-                                    
-                                    <option>Rim Size</option>
-                                    
-                                </select>
-                            </div>
-                            
-                            <div class="col-sm-2"> 
-                                <input type="radio"  id="view1" value="view1" name="view1">View 1
-                            </div>
-                            <div class="col-sm-2"> 
-                                <input type="radio"   id="view2" value="view2" name="view1">View 2
-                            </div>
-                        </div>
-                        
-                        <div class="row mb-3">
-                            <label class="col-sm-3 col-form-label" for="terrain">Terrain</label>
-                            <div class="col-sm-5"> 
-                                <select class="form-select" id="terrain"name="terrain">
-                                    <option value="Any">Any</option>
-                                </select>
-                            </div>
-                        </div>
-                        
-                        <button class="btn btn-primary" type="submit">
-                            Search
-                            <i class="fa fa-search"></i>
-                        </button>
-                        
-                    </form> 
-                </div>
-                
-            </div> <!-- row.// -->
-        </div><!-- container // -->
-    </section>
-    
-    <section class="section-name padding-y-sm">
-        <div class="container">
-    <div class="row">
-
-         
-        <header class="section-heading">
-            <h3 class="section-title">The "BEST TYRE" Experience</h3>
-        </header><!-- sect-heading -->
-
-    </div>
-
 
     
-
-      <div class="row mb-3 d-flex justify-content-center" >
-        <div class="col-sm-3 d-flex justify-content-center">
-        <button type="button" class="btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">1</button>
-        </div>
-        <div class="col-sm-3 d-flex justify-content-center">
-        <button type="button" class="col-sm-3  btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">2</button>
-        </div>
-        <div class="col-sm-3 d-flex justify-content-center">
-        <button type="button" class="col-sm-3  btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">3</button>
-        </div>
-        <div class="col-sm-3 d-flex justify-content-center">
-        <button type="button" class="col-sm-3  btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">4</button>
-        </div>
-    
-      </div>
-
-    <div class="row d-flex justify-content-center" >
-        
-        <div class="col-sm-3 ">
-            <h3 class=" d-flex justify-content-center">You search</h3>
-            <p class="">Search over <strong>~100 tyres</strong> to find the right tyre for your car</p>
-        </div>
-        
-        <div class="col-sm-3">              
-            <h3 class=" d-flex justify-content-center">You buy</h3>
-            <p class="">Purchase &amp; save up to <strong>45% off</strong> MRP</p>
-        </div>
-        
-        <div class="col-sm-3">              
-            <h3 class=" d-flex justify-content-center">We deliver</h3>
-            <p class="">We’ll deliver your tyres to one of our fitment locations or your preferred address <strong>FAST &amp; FREE<sup>+</sup></strong> (exclusions apply see <a class="sc-dzVpKk bBBwQO" href="/learn-more/purchasing-tyres/delivery-information">Delivery Information</a>. for further details)</p>
-        </div>
-        
-
-        <div class="col-sm-3">              
-            <h3 class=" d-flex justify-content-center">We install</h3>
-            <p class="">Our <strong>Mobile Fitting Vans</strong> can come to you, or select one of our <strong>preferred Fitment Centre's</strong> to install your tyres and they'll do the rest^</p>
-        </div>
-        
-
-    </div>
-    </div>
-</section>
-    
+   
     
    
     <script>
