--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -22,7 +22,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"> <img class="logo " src="{% static './images/logo.png' %}"></a>
+
+       
+        <a  class="navbar-brand" href="{% url 'home' %}"> <img class="logo rounded mx-auto d-block" src="{% static './images/logo.png' %}"></a>
 
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,35 +54,36 @@
             </ul>
            
 
-                <div class="">
-                    {% if user.id is None %}
-                    <div class="widget-header">
-                        <small class="title text-muted">Welcome guest!</small>
-                        <div> 
-                            <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
-                            <a href="{% url 'register' %}"> Register</a>
-                        </div>
-                    </div>
-                    {% else %}
-                    <div class="widget-header">
-                        <small class="title text-muted">Welcome {{ user.first_name }}!</small>
-                        <div>
-                            <a href="{% url 'dashboard' %}">Dashboard</a> <span class="dark-transp"> | </span>
-                            <a href="{% url 'logout' %}"> Logout</a>
-                        </div>
-                    </div>
-                    {% endif %}
-                    <a href="{% url 'cart' %}" class="widget-header ps-2 ms-2 me-2">
-                        <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-                        <span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
-                    </a>
-                </div> <!-- widgets-wrap.// -->
+               
 
              
 
 
           
         </div>
+        <div class="">
+          {% if user.id is None %}
+          <div class="widget-header">
+              <small class="title text-muted">Welcome guest!</small>
+              <div> 
+                  <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
+                  <a href="{% url 'register' %}"> Register</a>
+              </div>
+          </div>
+          {% else %}
+          <div class="widget-header">
+              <small class="title text-muted">Welcome {{ user.first_name }}!</small>
+              <div>
+                  <a href="{% url 'dashboard' %}">Dashboard</a> <span class="dark-transp"> | </span>
+                  <a href="{% url 'logout' %}"> Logout</a>
+              </div>
+          </div>
+          {% endif %}
+          <a href="{% url 'cart' %}" class="widget-header ps-2 ms-2 me-2">
+              <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
+              <span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
+          </a>
+      </div> <!-- widgets-wrap.// -->
       </div>
       </nav>
     </section> <!-- header-main .// -->
