--- a/templates/home.html
+++ b/templates/home.html
@@ -18,12 +18,11 @@
          
         <section class="section-name ">
             <div class="container">
-                <header class="section-heading">
-                    <h3 class="section-title">Are you looking to buy a Tyre?</h3>
-                </header><!-- sect-heading -->
-                 
-                <hr>
+         
+                
                 <div class="row searchseation">
+
+                    <h4>Are you looking to buy a Tyre?</h4>
                     
                     <div class="col-sm-4">
                         <p>How to find car tyre size? <br>
