--- a/static/css/ui.css
+++ b/static/css/ui.css
@@ -865,7 +865,7 @@ a[class*=card]:hover .title {
 }
 .card-product-grid .info-wrap {
   overflow: hidden;
-  padding: 18px 18px;
+  padding: 10px 10px;
 }
 .card-product-grid .bottom-wrap {
   padding: 18px;
@@ -1555,17 +1555,22 @@ a[class*=card]:hover .title {
   align-content: flex-end;
   top:20px;
   position: absolute;
+  border-radius: 25px;
 }
 
+
 @media only screen and (min-width: 1167px) {
-  .searchseation {
-      width: calc(100% - 50px);
-      height: auto;
-      padding: 40px 30px 25px;
-      position: relative;
-      background-color: rgba(50,50,50,.9);
-  }
-  }
+.searchseation {
+    top:200px;
+    width: calc(50%);
+    height: auto;
+    padding: 14px 10px 10px;
+    position: relative;
+    background-color: rgba(50,50,50,.9);
+    
+}
+}
+
 
 
   .searchseation {
@@ -1575,12 +1580,13 @@ a[class*=card]:hover .title {
 }
 
 .accordion-button {
-  background-color: white !important;;
+  background-color: white !important;
 }
 
 .seimg {
   color: white;
-  height: 400px;
-  background-size: cover !important;
+  height: 500px;
   position: relative;
+ 
+  background-size: 100% 100% !important;
 }
