--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
     <!-- Font awesome 5 -->
     <link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
-
+    
     <!-- custom style -->
     <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
@@ -31,6 +31,10 @@
     
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+<!-- Roboto -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
   
     <script src="https://www.paypal.com/sdk/js?client-id=ATtu-wamgO3lWJD224IyFFjKLAf72eJilLgWD_GTkpKjCAMeDAgojfRU9JA7HvyP1BBUPLLT-WWPUW5k&components=buttons"></script>
