--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -18,17 +18,7 @@
         
     </article> <!-- gallery-wrap .end// -->
     
-    <ul class="thumb">
      
-      <li>
-        
-        {% for i in product_gallery %}
-        <a href="{{ i.image.url }}" target="mainImage"><img src="{{ i.image.url }}" alt="Product Image"></a>
-        {% endfor %}
-        <a href="{{ single_product.images.url }}" target="mainImage"><img src="{{ single_product.images.url }}" alt="Product Image"></a>
-      </li>
-    
-    </ul>
    
             </aside>
             <main class="col-md-6 border-left">
@@ -98,7 +88,7 @@
 
          <hr>
 
-         <p style=" white-space:  pre-wrap;word-wrap: break-word;">{{ single_product.description }}</p>
+         <p style=" white-space:  pre-wrap;word-wrap: break-word;">{{ single_product.description|safe }}</p>
     
         
     </article> <!-- product-info-aside .// -->
