--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -25,7 +25,9 @@
 				
 				{% if '/store/category/batteries/' != request.path %}
 				<div class="card">
-					
+					<div class="card-header">
+						Filter
+					</div>
 					<div class="card-body">
 						
 						<form action="{% url 'search_size' %}" method="GET" class="search">
@@ -72,14 +74,7 @@
 							</div>
 							
 							
-							<div class="row mb-3">
-								<label class="col-sm-4 col-form-label" for="terrain">Terrain</label>
-								<div class="col-sm-6"> 
-									<select class="form-select" id="terrain"name="terrain">
-										<option selected>{{ sterrain }}</option>
-									</select>
-								</div>
-							</div>
+							 
 							
 							<input type="hidden" id="view1"  name="view1" value="view2">
 							
@@ -170,11 +165,11 @@
 				
 				<header class="border-bottom mb-4 pb-3">
 					<div class="form-inline">
-						<span class="mr-md-auto">{{ product_count }} Items found </span>
-						
+						<span class="mr-md-auto">{{ product_count }} Items found</span>
 					</div>
 				</header><!-- sect-heading -->
 				
+
 				<div class="row">
 					{% if products %}
 					{% for product in products %}
