--- a/templates/store/store_search.html
+++ b/templates/store/store_search.html
@@ -6,157 +6,309 @@
 
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
-	<div class="container">
-		{% if 'search' in request.path %}
-		<h4 class="title-page">Search Results</h4>
-		{% else %}
-		<h2 class="title-page">Our Store</h2>
-		{% endif %}
-	</div> <!-- container //  -->
+<div class="container">
+	{% if 'search' in request.path %}
+	<h4 class="title-page">Search Results</h4>
+	{% else %}
+	<h4 class="title-page">Our Store</h4>
+	{% endif %}
+</div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
 
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content p-2">
-	<div class="container">
-		
-		
-		<div class="row">
-			<aside class="col-md-3">
-				
-				<div class="card">
-					<div class="card-body">
-					<form action="{% url 'search_size' %}" method="GET" class="search">
-                        
-                        <div class="form-group row">
-                            
-                            <label class="col-sm-4" for="width">Width</label>
-                            <div class="col-sm-6"> 
-                                <select class="form-control" onclick="getsizes('width');" id="width"name="width">
-									
-                                    <option>Width</option>
-                                    {% for width in width %}
-									{% if width.width == swidth %}
-									<option selected>{{ width.width }}</option>
-									{% else %}
-                                    <option>{{ width.width }}</option>
-									{% endif %}
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                        
-                        <div class="form-group row">
-                            <label class="col-sm-4" for="profile">Profile</label>
-                            <div class="col-sm-6"> 
-                                <select class="form-control" onclick="getsizes('profile');" id="profile"name="profile">
-                                    
-                                    <option>Profile</option>
+<div class="container">
 
-                                    
-									<option selected>{{ sprofile }}</option>
-									 
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-sm-4" for="diameter">Rim Size</label>
-                            <div class="col-sm-6"> 
-                                <select class="form-control"  id="diameter"name="diameter">
-                                    
-                                    <option>Rim Size</option>
-                                    <option selected>{{ sdiameter }}</option>
-						
-                                </select>
-                            </div>
-                            
-                            
-                        </div>
-                        
-                        <input type="hidden" id="view1"  name="view1" value="view1">
-                        
-                        <button class="btn btn-primary" type="submit">
-                            Filter
-                            <i class="fa fa-search"></i>
-                        </button>
-                        
-                    </form> 
-					
-				</div> 
-				</div> <!-- card.// -->
+
+<div class="row">
+	<aside class="col-md-3">
+		
+<div class="card">
+	<div class="card-header">
+		Filter
+	</div>
+	<div class="card-body">
+
+		{% if 'width' in request.GET %}
+		<form action="{% url 'search_size' %}" method="GET" class="search">
+			
+			<div class="row mb-3">
 				
-			</aside> <!-- col.// -->
-			<main class="col-md-9">
-				
-				
-				
-				<header class="border-bottom mb-4 pb-3">
-					<div class="form-inline">
-						<span class="mr-md-auto">{{ product_count }} Items found </span>
+				<label class="col col-sm-4 col-form-label " for="width">Width</label>
+				<div class="col-sm-6"> 
+					<select class="form-select" onclick="getsizes('width');" id="width"name="width">
 						
-					</div>
-				</header><!-- sect-heading -->
-				
-				 
-				
-				<div class="row">
-					
-					<table class="table">
-						<tr>
-							<th>Product</th>
-							<th>Country</th>
-							<th>Price</th>
-						</tr>
-						
-						{% if products %}
-						
-						{% for product in products %}
-						
-						<tr>
-							<td><a href="{{ product.get_url }}"> {{ product.product_name }}</a></td>
-							<td><a href="{{ product.get_url }}">{{ product.country }}</a></td>
-							<td><a href="{{ product.get_url }}">{{ product.price }}</a></td>	
-						</tr>
-						
+						<option>Width</option>
+						{% for width in width %}
+						{% if width.width == swidth %}
+						<option selected>{{ width.width }}</option>
+						{% else %}
+						<option>{{ width.width }}</option>
+						{% endif %}
 						{% endfor %}
-					</table>
-					
-					{% else %}
-					<h2>No Results Found. Please try again</h2>
-					{% endif %}
-				</div> <!-- row end.// -->
-				
-				
+					</select>
+				</div>
+			</div>
+			
+			<div class="row mb-3">
+				<label class="col-sm-4 col-form-label" for="profile">Profile</label>
+				<div class="col-sm-6"> 
+					<select class="form-select" onclick="getsizes('profile');" id="profile"name="profile">
+						
+						<option>Profile</option>
+						<option selected>{{ sprofile }}</option>
+									 
+					</select>
+				</div>
+			</div>
+			<div class="row mb-3">
+				<label class="col-sm-4 col-form-label" for="diameter">Rim Size</label>
+				<div class="col-sm-6"> 
+					<select class="form-select"   onclick="getsizes('rim');"  id="diameter"name="diameter">
+						
+						<option>Rim Size</option>
+						<option selected>{{ sdiameter }}</option>
+						
+					</select>
+				</div>
+			</div>
 
+ 
+			
+			<input type="hidden" id="view1"  name="view1" value="view2">
+			
+			<button class="btn btn-primary" type="submit">
+				Filter
+				<i class="fa fa-search"></i>
+			</button>
+			
+		</form> 
+		{% else %}
+		<form action="{% url 'search_size' %}" method="GET" class="search">
+							
+			<div class="row mb-3">
 				
-				
-				
-				
-				 
-			</main> <!-- col.// -->
+				<label class="col col-sm-4 col-form-label " for="width">AH</label>
+				<div class="col-sm-6"> 
+					<select class="form-select" onclick="getsizes('AH');" id="ah"name="ah">
+						
+						<option>Any</option>
+						{% for ah in ah %}
+						{% if ah.ah == sah %}
+						<option selected>{{ ah.ah }}</option>
+						{% else %}
+						<option>{{ ah.ah }}</option>
+						{% endif %}
+						{% endfor %}
+					</select>
+				</div>
+			</div>
+			
+			 
+			
+			
+			<div class="row mb-3">
+				<label class="col-sm-4 col-form-label" for="terrain">Left / Right</label>
+				<div class="col-sm-6"> 
+					<select class="form-select" id="lr"name="lr">
+						 
+						{% if slr != None and  slr != "Any" %}
+						{% if slr == "L" %}
+						<option>Any</option>
+						<option value="L" selected>Left</option>
+						<option value="R">Right</option>
+						{% else %}
+						<option>Any</option>
+						<option value="R" selected>Right</option>
+						<option value="L">Left</option>
+						{% endif %}
+						{% else %}
+
+						<option>Any</option>
+						<option value="L">Left</option>
+						<option value="R">Right</option>
+						{% endif %}
+					</select>
+				</div>
+			</div>
+			
+			<input type="hidden" id="view1"  name="view1" value="view2">
+			
+			<button class="btn btn-primary" type="submit">
+				Filter
+				<i class="fa fa-search"></i>
+			</button>
+			
+		</form> 
+
+
+		{% endif %}
+	</div>
+	
+</div> <!-- card.// -->
+
+	</aside> <!-- col.// -->
+	<main class="col-md-9">
+
+
+
+<header class="border-bottom mb-4 pb-3">
+		<div class="form-inline">
+			<span class="mr-md-auto">{{ product_count }} Items found  for {{ swidth }}/{{ sprofile }} {{ sdiameter }}</span>
 			
 		</div>
-		
-	</div> <!-- container .//  -->
+</header><!-- sect-heading -->
+ 
+
+<div class="row">
+	{% if products %}
+    {% for product in products %}
+	<div class="col-md-6">
+		 
+		<figure class="card card-product-grid">
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="img-wrap"> 
+						
+						{% if product.discount > 0 %}
+						<span class="tag-on-sale onsale sale-left">-{{ product.discount }}%</span>
+						{% endif %}
+
+						
+						<img src="{{ product.images.url }}">
+						
+					</div> <!-- img-wrap.// -->
+					<figcaption class="info-wrap">
+						 
+							
+							<div class="product-name">
+								<a href="{{  product.get_url }}" class="title">{{ product.product_name }}</a>
+							</div>
+
+							
+						 
+						
+					</figcaption>
+				</div>
+
+				<div class="col-sm-6">
+					<div class="row">
+						{% if product.subimgs %}
+
+						<div class="price">Features</div>
+						<img class="img-fluid" src="{{ product.subimgs.url }}">
+						{% endif %}
+					</div>
+					
+					<div class="row">
+						 
+
+						<div class="price" style="padding-top: 10%;">Country</div>
+						<div  style="padding-left: 10%;">{{ product.country }} </div>
+						 
+					</div>	
+
+					<div class="row">
+						<div class="price" style="padding-top: 10%;">Price</div>
+						<div class="price-wrap mt-2">
+							{% if product.discount > 0 %}
+							
+							<span class="price-old">Rs. {{ product.price }}</span>
+							
+							<span class="price"  style="font-size: 25px;">Rs. {{ product.get_selling }}</span>
+							{% else %}
+							<span class="price"  style="font-size: 25px;">Rs. {{ product.price }}</span>
+							{% endif %}
+
+
+
+						</div> <!-- price-wrap.// -->
+					</div>
+				</div>
+			</div>
+		</figure>
+	 
+	</div> <!-- col.// -->
+    {% endfor %}
+	{% else %}
+		<h2>No Results Found. Please try again</h2>
+	{% endif %}
+</div> <!-- row end.// -->
+
+
+{% if products %}
+				<nav class="mt-4" aria-label="Page navigation sample">
+					<ul class="pagination">
+						{% if products.has_previous %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page=1">First</a>
+						</li>
+						<li class="page-item">
+							<a class="page-link"
+								href="{% url 'store' %}?page={{products.previous_page_number}}">Previous</a>
+						</li>
+						{% else %}
+						<li class="page-item disabled">
+							<a class="page-link" href="#">First</a>
+						</li>
+						<li class="page-item disabled">
+							<a class="page-link" href="#">Previous</a>
+						</li>
+						{% endif %}
+						{% if products.number|add:'-2' >= 1 %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'-2' }}">&hellip;</a>
+						</li>
+						{% endif %}
+						{% for page in products.paginator.page_range %}
+						{% if products.number|add:'-1' <= page and page <= products.number|add:'1' %}
+						{% if page == products.number %}
+						<li class="page-item active">
+							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
+						</li>
+						{% else %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
+						</li>
+						{% endif %}
+						{% endif %}
+						{% endfor %}
+						{% if products.number|add:'2' <= products.paginator.num_pages %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'2' }}">&hellip;</a>
+						</li>
+						{% endif %}
+						{% if products.has_next %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{products.next_page_number}}">Next</a>
+						</li>
+						<li class="page-item">
+							<a class="page-link"
+								href="{% url 'store' %}?page={{ products.paginator.num_pages }}">Last</a>
+						</li>
+						{% else %}
+						<li class="page-item disabled">
+							<a class="page-link" href="#">Next</a>
+						</li>
+						<li class="page-item disabled">
+							<a class="page-link" href="#">Last</a>
+						</li>
+						{% endif %}
+					</ul>
+				</nav>
+				{% endif %}
+	</main> <!-- col.// -->
+
+</div>
+
+</div> <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
-
-<!-- ========================= FOOTER ========================= -->
-<footer class="section-footer border-top padding-y">
-	<div class="container">
-		<p class="float-md-right"> 
-			&copy Copyright 2019 All rights reserved
-		</p>
-		<p>
-			<a href="#">Terms and conditions</a>
-		</p>
-	</div><!-- //container -->
-</footer>
-
-
 <script>
  
-	
+	 
+
 	function getsizes(cmbselect) {
 		
 		
@@ -174,7 +326,9 @@
 		if (cmbselect == "profile") {
 			var dataString = "width="+ document.getElementById("width").value + "&profile="+ document.getElementById("profile").value;
 		}
-		
+		if (cmbselect == "rim") {
+			var dataString = "width="+ document.getElementById("width").value + "&profile="+ document.getElementById("profile").value+ "&rim="+ document.getElementById("diameter").value;
+		}
 		
 		
 		$.ajax({
@@ -207,7 +361,16 @@
 						i = i +1;
 					}); 
 				}
-				
+				if (cmbselect == "rim") {
+					var mySelect = document.getElementById('terrain');
+					mySelect.options.length = 0;
+					mySelect.options[0] = new Option ("Any", "Any");
+					i = 1;
+					response.width.forEach(function (item) { 
+						mySelect.options[i] = new Option (item.terrain, item.terrain);
+						i = i +1;
+					}); 
+				}
 				
 			},
 			error: function (response) {
@@ -222,5 +385,7 @@
 	
 	
 </script>
+<!-- ========================= FOOTER ========================= -->
+
 <!-- ========================= FOOTER END // ========================= -->
 {% endblock %}
