--- a/templates/home.html
+++ b/templates/home.html
@@ -40,8 +40,8 @@
                                 <div class="row mb-3">
                                     
                                     <div class="col col-sm-4"> 
-                                    <label class="col col-form-label " for="width">Width</label>
-                                    <select class="form-select"  required onclick="getsizes('width');" id="width"name="width">
+                                    <label class="col col-form-label  col-form-label-sm" for="width">Width</label>
+                                    <select class="form-select form-select-sm"  required onclick="getsizes('width');" id="width"name="width">
                                         <option>Width</option>
                                         {% for width in width %}
                                         <option>{{ width.width }}</option>
@@ -51,8 +51,8 @@
 
 
                                     <div class="col col-sm-4"> 
-                                    <label class="col col-form-label" for="profile">Profile</label>
-                                    <select class="form-select" required onclick="getsizes('profile');" id="profile"name="profile">
+                                    <label class="col col-form-label col-form-label-sm" for="profile">Profile</label>
+                                    <select class="form-select form-select-sm" required onclick="getsizes('profile');" id="profile"name="profile">
                                             
                                         <option>Profile</option>
                                         
@@ -60,8 +60,8 @@
                                     </div>
 
                                     <div class="col col-sm-4"> 
-                                    <label class="col col-form-label" for="diameter">Rim Size</label>
-                                    <select class="form-select"  required onclick="getsizes('rim');"   id="diameter"name="diameter">
+                                    <label class="col col-form-label col-form-label-sm" for="diameter">Rim Size</label>
+                                    <select class="form-select form-select-sm"  required onclick="getsizes('rim');"   id="diameter"name="diameter">
                                         <option>Rim Size</option>
                                     </select>
                                     </div>
@@ -72,8 +72,8 @@
                                 <div class="row mb-3">
                                 
                                 <div class="col col-sm-4"> 
-                                    <label class="col col-form-label" for="diameter">Pickup Location</label>
-                                    <select class="form-select"  required   id="ploc"name="ploc">
+                                    <label class="col col-form-label col-form-label-sm" for="diameter">Pickup Location</label>
+                                    <select class="form-select  form-select-sm"  required   id="ploc"name="ploc">
                                         <option>Any</option>
                                     </select>
                                     </div>
